; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/rio/extr_rio_linux.c_rio_enable_tx_interrupts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/rio/extr_rio_linux.c_rio_enable_tx_interrupts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Port = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@GS_TX_INTEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @rio_enable_tx_interrupts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rio_enable_tx_interrupts(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.Port*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.Port*
  store %struct.Port* %5, %struct.Port** %3, align 8
  %6 = call i32 (...) @func_enter()
  %7 = load %struct.Port*, %struct.Port** %3, align 8
  %8 = bitcast %struct.Port* %7 to i8*
  %9 = call i32 @RIOTxEnable(i8* %8)
  %10 = load i32, i32* @GS_TX_INTEN, align 4
  %11 = xor i32 %10, -1
  %12 = load %struct.Port*, %struct.Port** %3, align 8
  %13 = getelementptr inbounds %struct.Port, %struct.Port* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, %11
  store i32 %17, i32* %15, align 4
  %18 = call i32 (...) @func_exit()
  ret void
}

declare dso_local i32 @func_enter(...) #1

declare dso_local i32 @RIOTxEnable(i8*) #1

declare dso_local i32 @func_exit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
